dropdown overlaping issue

--- a/apps/web-giddh-admin/src/app/subscription/components/edit-subscriptions/edit-subscriptions.component.scss
+++ b/apps/web-giddh-admin/src/app/subscription/components/edit-subscriptions/edit-subscriptions.component.scss
@@ -1,9 +1,8 @@
 .subscrib-list-table thead tr th {
     min-width: 200px;
 }
-
 .multiselect-dropdown {
-    max-height: 200px !important;
+    max-height: 200px;
     overflow-y: auto;
 }
 .dropdown-table {
